syntax = "proto3";

import "laughing-server/proto/common/common.proto";

package verify;

service Verify {
    rpc FbLogin(FbLoginRequest) returns (LoginReply) {}
    rpc Logout(common.CommRequest) returns (common.CommReply) {}
    rpc CheckToken(CheckTokenRequest) returns (common.CommReply) {}
}

message FbLoginRequest {
    common.Head head = 1;
    string fbid = 2;
    string fbtoken = 3;
    string imei = 4;
    string model = 5;
    string language = 6;
    int64 version = 7;
    string os = 8;
}

message LoginReply {
    common.Head head = 1;
    int64 uid = 2;
    string token = 3;
    string headurl = 4;
    string nickname = 5;
}

message CheckTokenRequest {
    common.Head head = 1;
    string token = 2;
}
